Feature: Unique Fields (#3)
* Renamed requiredFields variable. Added missing

* Moved init of Set and Map containers to constructor

* New set of fields that are required as unique fields

* Updated README.md

--- a/classes/SObjectUtil.cls
+++ b/classes/SObjectUtil.cls
@@ -39,7 +39,8 @@ public with sharing class SObjectUtil {
 
     private SObjectType theSObjectDescribe { get; private set; }
     public String selectAllString { get; private set; }                 //  A comma separated string of all fields on the SObject. Intended to act as * for SOQL queries
-    public Set<String> requiredFields { get; private set; }             //  The DeveloperNames of required fields on the SObject level
+    public Set<String> fieldsUnique { get; private set; }               //  The DeveloperNames of unique fields on the SObject
+    public Set<String> fieldsRequired { get; private set; }             //  The DeveloperNames of required fields on the SObject level
     public Map<String, Id> mapRecordTypeNameToId { get; private set; }  //  Maps the DeveloperName of a record type to its Id
     public Map<String, String> mapDevNameToType { get; private set; }   //  Maps the DeveloperName of a field to its field type (See: ENUM_FIELD_TYPES)
     //  Schema.PicklistEntry function information: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_class_Schema_PicklistEntry.htm#apex_class_Schema_PicklistEntry
@@ -59,6 +60,11 @@ public with sharing class SObjectUtil {
             throw new SObjectUtilException(errorString);
         }
 
+        this.fieldsUnique = new Set<String>();
+        this.fieldsRequired = new Set<String>();
+        this.mapDevNameToType = new Map<String, String>();
+        this.mapPicklistValues = new Map<String, List<Schema.PicklistEntry>>();
+
         try {
             this.populateMapFieldInformation(sObjectType);
             this.populateMapRecordTypes(sObjectType);
@@ -73,16 +79,14 @@ public with sharing class SObjectUtil {
     /*  ****************************************  */
 
     /**
-     * Populates the public variables: 
+     * Populates the public variables:
      * - mapDevNameToType
-     * - requiredFields
+     * - fieldsUnique
+     * - fieldsRequired
      * @param   String. API Name of the SObject to populate field
      *          name and type inforation for.
      */
     private void populateMapFieldInformation(String theSObjectType) {
-        this.requiredFields = new Set<String>();
-        this.mapDevNameToType = new Map<String, String>();
-        this.mapPicklistValues = new Map<String, List<Schema.PicklistEntry>>();
         Map<String, Schema.SObjectField> mapAccFields = this.theSObjectDescribe.getDescribe().fields.getMap();
 
         for (String fieldKey : mapAccFields.keySet()) {
@@ -91,9 +95,14 @@ public with sharing class SObjectUtil {
             String fieldType = String.valueOf(mapAccFields.get(fieldKey).getDescribe().getType());
             this.mapDevNameToType.put(fieldName, fieldType);
 
+            //  Populates set of unique fields on the SObject
+            if (mapAccFields.get(fieldKey).getDescribe().isUnique()) {
+                this.fieldsUnique.add(mapAccFields.get(fieldKey).getDescribe().getName());
+            }
+
             //  Populates set of required fields on the SObject level
             if (!mapAccFields.get(fieldKey).getDescribe().isNillable()) {
-                requiredFields.add(mapAccFields.get(fieldKey).getDescribe().getName());
+                this.fieldsRequired.add(mapAccFields.get(fieldKey).getDescribe().getName());
             }
 
             //  Populate map of FieldName to PicklistValues for any picklist field type
